--- a/app/views/pages/checklist.html.erb
+++ b/app/views/pages/checklist.html.erb
@@ -37,7 +37,7 @@
       <section>
         <h2 class="title">How to become a design apprentice</h2>
         <h3 class="subtitle">Checklist for future apprentices</h3>
-        <h6 class="blogger-name"><a>ed wassermann</a></h6>
+        <h6 class="blogger-name italics"><a>ed wassermann</a></h6>
       </section>
     </div>
     
